--- a/front/package.json
+++ b/front/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "boring-avatars": "^1.5.8",
     "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
+    "sass": "^1.37.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
