--- a/pong-backend/package.json
+++ b/pong-backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "bcrypt-nodejs": "0.0.3",
+    "express-session": "^1.17.2",
     "knex": "^0.21.21",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -36,6 +37,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
