--- a/front-typescript/package.json
+++ b/front-typescript/package.json
@@ -11,11 +11,12 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "boring-avatars": "^1.5.8",
+    "nest": "^0.1.6",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
