--- a/pong-backend/package.json
+++ b/pong-backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@types/passport-local": "^1.0.34",
     "bcrypt-nodejs": "0.0.3",
     "express-session": "^1.17.2",
@@ -48,6 +49,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.24",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-oauth2": "^1.4.11",
