--- a/pong-backend/package.json
+++ b/pong-backend/package.json
@@ -26,7 +26,9 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.0.6",
     "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/websockets": "^8.0.6",
     "@types/passport-local": "^1.0.34",
     "bcrypt-nodejs": "0.0.3",
     "express-session": "^1.17.2",
