--- a/front-typescript/package.json
+++ b/front-typescript/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "boring-avatars": "^1.5.8",
+    "kute.js": "^2.1.2",
     "nest": "^0.1.6",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
