--- a/pong-backend/package.json
+++ b/pong-backend/package.json
@@ -31,7 +31,8 @@
     "@nestjs/websockets": "^8.0.6",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
-    "bcrypt-nodejs": "0.0.3",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "express-session": "^1.17.2",
     "knex": "^0.21.21",
     "node-2fa": "^2.0.2",
@@ -44,7 +45,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "source-map-support": "^0.5.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
