--- a/front-typescript/Dockerfile
+++ b/front-typescript/Dockerfile
@@ -1,14 +1,14 @@
 # syntax=docker/dockerfile:1
 
 FROM node:16.6.2
-ENV NODE_ENV=production
+# ENV NODE_ENV=production
 
 WORKDIR /app
 
 COPY ["package.json", "package-lock.json*", "./"]
 
-RUN npm install --production
+RUN npm install
 
 COPY . .
 
-CMD [ "npm", "run", "start:dev" ]
+CMD [ "npm", "run", "start" ]
