--- a/pong-backend/package.json
+++ b/pong-backend/package.json
@@ -32,6 +32,8 @@
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "0.0.3",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "express-session": "^1.17.2",
     "knex": "^0.21.21",
     "node-2fa": "^2.0.2",
