Get all urls from environment

--- a/pong-backend/Dockerfile
+++ b/pong-backend/Dockerfile
@@ -1,6 +1,7 @@
 # syntax=docker/dockerfile:1
 
-FROM node:16.6.2
+FROM node:16.9.1
+# Latest stable version at the time of the defence. Fixed to avoid bugs
 ENV NODE_ENV=production
 
 WORKDIR /app
@@ -14,4 +15,4 @@ RUN mkdir /images
 COPY . .
 COPY ./audio_files /audio_files
 
-CMD [ "npm", "run", "start:dev" ]
+CMD [ "npm", "run", "start" ]
