--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8001:5432"
   backend:
-    build: ../pong-backend/
+    build: ./pong-backend/
     ports:
       - "3000:3000"
       - "8080:8080"
@@ -18,11 +18,12 @@ services:
     environment: 
       - API_UID=${API_UID}
       - API_SECRET=${API_SECRET}
-      - APP_SECRET=1234
+      - APP_SECRET=${APP_SECRET}
       - DB_HOST=database
       - DB_PORT=5432
+      - FRONTEND_URL=${FRONTEND_URL}
   front:
-    build: ../front-typescript/
+    build: ./front-typescript/
     ports:
       - "3001:3000"
     environment: 
