--- a/front-typescript/Dockerfile
+++ b/front-typescript/Dockerfile
@@ -1,6 +1,7 @@
 # syntax=docker/dockerfile:1
 
-FROM node:16.6.2
+FROM node:16.9.1
+# Latest stable version at the time of the defence. Fixed to avoid bugs
 # ENV NODE_ENV=production
 
 WORKDIR /app
