--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
   backend:
     build: ./pong-backend/
     ports:
-      - "2053:3000"
-      - "2083:2083"
-      - "2081:2081"
+      - "3000:3000"
+      - "3002:3002"
+      - "3003:3003"
     environment: 
       - API_UID=${API_UID}
       - API_SECRET=${API_SECRET}
@@ -22,6 +22,8 @@ services:
       - DB_HOST=database
       - DB_PORT=5432
       - FRONTEND_URL=${FRONTEND_URL}
+      - PORT_ONE=3002
+      - PORT_TWO=3003
   front:
     build:
       context: ./front-typescript/
