--- a/srcs/front-typescript/package.json
+++ b/srcs/front-typescript/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-colorful": "^5.4.0",
+    "react-device-detect": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
